--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,11 @@
     -->
   <title>Cey4Hub Online Store</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+<style>
+body {
+  overflow-x: hidden
+  };
+  </style>
 </head>
 
 <body>
