--- a/public/index.html
+++ b/public/index.html
@@ -25,14 +25,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 <style>
 body {
-  overflow-x: hidden
-  };
-  </style>
+  overflow-x: hidden !important;
+}
+</style>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root" style="overflow-x: hidden;"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
